Add consonant and velocity scope to config

--- a/AutoVelocity/App.config
+++ b/AutoVelocity/App.config
@@ -10,5 +10,7 @@
     <add key="endingVelocity" value="true"/>
     <add key="beginningVelocity" value="true"/>
     <add key="modSmooth" value="true"/>
+    <add key="consonantScope" value="bdfgjkpstvzclmnrwyh"/>
+    <add key="vowelScope" value="aeiouE93@AIO86x&amp;10"/>
   </appSettings>
 </configuration>
